app/less/components/verse/verse-audio-button.less
/**
 * FIXME: It's 26px in the browser, so I've hard-coded it here. This isn't
 * great, obviously. It would be better to know where the 26px comes from.
 */
@verse-height: 26px;
@verse-audio-button-block-extra: 3px;

@verse-audio-button-block-width: @verse-height + @verse-audio-button-block-extra * 2;

.lyric-block {
    .verse {
        &:first-child {
            padding-top: @verse-padding;

            .verse-audio-button-block {
                .verse-audio-button-child {
                    padding-top: @verse-padding;
                }
            }

            .verse-audio-indicator {
                padding-top: @verse-padding;
            }
        }
        &:last-child {
            padding-bottom: @verse-padding;

            .verse-audio-button-block {
                .verse-audio-button-child {
                    padding-bottom: @verse-padding;
                }
            }

            .verse-audio-indicator {
                padding-bottom: @verse-padding;
            }
        }

        &.interactable {
            position: relative;

            // Make all this styling better, obviously.
            &.interactivated {

                .verse-audio-button-block {
                    left: -@verse-audio-button-block-width * 0.5;

                    z-index: 5000;

                    .icon-canvas {
                        box-shadow: -1px 1px 4px 4px @box-shadow-colour;
                    }
                }

                .verse-audio-button {
                    opacity: 1;
                    // font-size: 1em;
                    animation: fontSnapback 0.16s;
                }
            }

            &.interactivated {
                box-shadow: inset 0 0 5px @darker-box-shadow-colour;
            }
        }
    }
}

.verse-audio-button-block {
    position: absolute;
    left: 0;
    height: 100%;
    width: @verse-audio-button-block-width;

    top: 50%;
    transform: translateY(-50%);

    transition: left @animation-fast;

    // Either button or icon.
    .verse-audio-button-child {
        box-sizing: border-box;
        height: 100%;
        width: 100%;
        // font-size: 1em;
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .verse-audio-button {
        position: relative;
        // font-size: 0.1em;
        opacity: 0;
        z-index: @verse-audio-button-z-index;
        transition: opacity @animation-default;

        &, .icon-canvas {
            width: @verse-audio-button-block-width;
            height: @verse-audio-button-block-width;
        }
    }

    .icon-canvas-block {
        // Override default.
        overflow: visible;
    }
}

